--- a/index.html
+++ b/index.html
@@ -3,13 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Site</title>
+    <title>Yash Sinha | Portfolio</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+            background-color: #f4f4f4;
+        }
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+            display: inline-block;
+            max-width: 500px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        .links a {
+            display: block;
+            text-decoration: none;
+            color: white;
+            background: #0073b1;
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .links a:hover {
+            background: #005582;
+        }
+        button {
+            background: #28a745;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin-top: 10px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        button:hover {
+            background: #218838;
+        }
     </style>
 </head>
 <body>
-    <h1>Hello, I'm Yash</h1>
-    <p>Welcome to my personal website hosted on GitHub Pages.</p>
+
+    <div class="container">
+        <h1>👋 Hi, I'm Yash Sinha!</h1>
+        <p>Welcome to my portfolio website.</p>
+        
+        <h2>📌 Connect with Me</h2>
+        <div class="links">
+            <a href="https://leetcode.com/u/YashSinha123/" target="_blank">🔗 LeetCode Profile</a>
+            <a href="https://www.geeksforgeeks.org/user/user_syy3hh7ipil/" target="_blank">🔗 GeeksforGeeks Profile</a>
+            <a href="https://www.linkedin.com/in/yashsinhakiit/" target="_blank">🔗 LinkedIn Profile</a>
+        </div>
+        
+        <h2>🎲 Random Fun Fact</h2>
+        <p id="fact">Click the button below to see a fun fact!</p>
+        <button onclick="generateFact()">Show Fun Fact</button>
+    </div>
+
+    <script>
+        function generateFact() {
+            const facts = [
+                "The first computer bug was an actual insect found in a Harvard Mark II computer in 1947!",
+                "JavaScript was created in just 10 days by Brendan Eich in 1995.",
+                "Python was named after Monty Python, not the snake.",
+                "The first website ever is still online: info.cern.ch",
+                "More than 70% of the Earth's surface is covered in water!"
+            ];
+            document.getElementById("fact").innerText = facts[Math.floor(Math.random() * facts.length)];
+        }
+    </script>
+
 </body>
 </html>
